--- a/src/assets/styles/map_styles.css
+++ b/src/assets/styles/map_styles.css
@@ -27,7 +27,7 @@ body {
     width: 100vw;
     height: 20px;
     text-align: center;
-    z-index: 900;
+    z-index: 10;
     transition: width 100ms ease;
 }
 
